# temperature-dashboard

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  main.py
app/models/: temperature.py
